fix unit test after merge with master (usage rules as set)